fix logo overlapping on mobile

--- a/assets/css/_single.styl
+++ b/assets/css/_single.styl
@@ -79,6 +79,9 @@ nav
     z-index: 2
     text-decoration: none
 
+    +below(335px)
+      padding: 5px 30px
+
   h1
     margin: 0
     color: #42425A
